[package]
name = "usnake"
version = "0.1.0"
authors = ["arosspope <andrew.pope456@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
panic-itm = "0.4.1" # panic-halt = "0.2.0"

atomic = "0.4"
heapless = "0.5.1"
lsm303dlhc = "0.2.0"
m = "0.1.1"
nb = "0.1.2"
# max7219 = "0.2.2"
# max7219 = { path = "/home/andy/projects/max7219" }
max7219 = { git = "https://github.com/arosspope/max7219" }
# embedded-hal = "0.2.3"
wyhash = "0.3.0"
cortex-m-rtfm = "0.5.1"

[dependencies.hal]
package = "stm32f3xx-hal"
version = "0.4.0"
features = ["stm32f303", "rt"]
git = "https://github.com/strom-und-spiele/stm32f3xx-hal"
branch = "adc"


[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
