[package]
name = "usnake"
version = "0.1.0"
authors = ["arosspope <andrew.pope456@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m      = "0.6.2"
cortex-m-rt   = "0.6.11"
cortex-m-rtfm = "0.5.1"

panic-itm   = "0.4.1"
heapless    = "0.5.1"
lsm303dlhc  = "0.2.0"
nb          = "0.1.2"
max7219     = "0.2.2"
wyhash      = "0.3.0"


[dependencies.hal]
package   = "stm32f3xx-hal"
version   = "0.4.0"
features  = ["stm32f303", "rt"]
git       = "https://github.com/strom-und-spiele/stm32f3xx-hal"
branch    = "adc"

