[package]
name        = "usnake"
description = "A rust implementation of the game snake for the stm32f3 discovery board."
version     = "1.0.1"
authors     = ["arosspope <andrew.pope456@gmail.com>"]
edition     = "2018"
categories  = ["games", "embedded", "no_std"]
keywords    = ["snake", "stm32f3", "rtfm", "max7219"]

[dependencies]
cortex-m      = "0.6.2"
cortex-m-rt   = "0.6.11"
cortex-m-rtfm = "0.5.1"

panic-itm   = "0.4.1"
heapless    = "0.5.1"
lsm303dlhc  = "0.2.0"
nb          = "0.1.2"
max7219     = "0.2.2"
wyhash      = "0.3.0"


[dependencies.hal]
package   = "stm32f3xx-hal"
version   = "0.5.0"
features  = ["stm32f303xc", "rt"]

